[package]
name = "kson"
version = "0.1.0"
authors = ["Jack Gallagher <jack@gallabytes.com>", "Baeo Maltinsky <baeo@kalix.io>"]
edition = "2018"

[dependencies]
# pyo3 = "0.6.0"
hashbrown = "0.2"
half = "1.3"
num-traits = "0.2"
num-bigint = "0.2"
bytes = "0.4"
failure = "0.1"
smallvec = {version = "0.6", features = ["union"]}
kson_macro = {path = "../kson_macro"}

[dev-dependencies]
proptest = "0.9"
serde = "1.0"
serde_json = "1.0"
criterion = "0.2"
common_utils = {path = "../common_utils"}

[[bench]]
name="encoder"
harness=false

# [[bench]]
# name="strings"
# harness=false

# [[bench]]
# name="encoder_profile"
# harness=false
# 
# [[bench]]
# name="decoder_profile"
# harness=false

[[bench]]
name="comparisons"
harness=false
