[package]
name = "kson"
version = "0.1.0"
authors = ["Jack Gallagher <jack@gallabytes.com>", "Baeo Maltinsky <baeo@kalix.io>"]
edition = "2018"

[features]
default = []
python = ["pyo3"]
lua = ["rlua"]

[dependencies]
hashbrown = "0.2"
half = "1.3"
num-traits = "0.2"
num-bigint = "0.2"
bytes = "0.4"
failure = "0.1"
smallvec = {version = "0.6", features = ["union"]}
womp = {path = "../womp"}
kson_macro = {path = "./kson_macro"}
kson_derive = {path = "./kson_derive"}

pyo3 = {version =  "0.7.0-alpha.1", optional = true}
rlua = {version = "0.16", optional = true}

[dev-dependencies]
proptest = "0.9"
serde = "1.0"
serde_json = "1.0"
criterion = "0.2"
filebuffer = "0.4"
common_utils = {path = "../common_utils"}

[profile.dev]
lto = false

[[bench]]
name="encoder"
harness=false

# [[bench]]
# name="strings"
# harness=false

# [[bench]]
# name="encoder_profile"
# harness=false
# 
# [[bench]]
# name="decoder_profile"
# harness=false

[[bench]]
name="comparisons"
harness=false

[profile.release]
debug = true


